--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "id": "e0a9bea2",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "4     143.TA.91-1-M-j24-1.50.R  8501120:0:6   83100.0   83100.0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "d5877929",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "id": "3fd54ac4",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "4502  1_21.TA.91-3N-Y-j24-1.139.R  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "id": "aac057f7",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,11 @@
     "    # t2 = arrival time when remaining seated, uses T[c_trip]\n",
     "    t_2 = T[row['trip_id']]\n",
     "\n",
-    "    # arrival time when transferring, uses S[c_arr_stop]\n",
+    "    # t_3 = arrival time when transferring, uses S[c_arr_stop]\n",
+    "    ## for this part, S must be sorted by earliest departure time;\n",
+    "    ## it may be the case that this naturally occurs due to how S is populated, in which case this sort is an unnecessary time suck...\n",
+    "    S[row['arr_stop']] = sorted(S[row['arr_stop']], key=lambda x: x[0])\n",
+    "    \n",
     "    i = 0 # earlier time = earlier index in this array\n",
     "    p = S[row['arr_stop']][i]\n",
     "    while p[0] < row['arr_time']: # loop purpose: find earliest previously seen connection's departure time that is after currently seen connection's arrival time\n",
@@ -317,14 +321,6 @@
     "from IPython.display import display, Image\n",
     "display(Image(filename='profile_connection_scan_algo.png'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b171dc5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
