journey toward journey extraction....

--- a/project.ipynb
+++ b/project.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "3fd54ac4",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "4502  1_21.TA.91-3N-Y-j24-1.139.R  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,8 +227,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed01437a",
+   "metadata": {},
+   "source": [
+    "# Connection Scan"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "aac057f7",
    "metadata": {},
    "outputs": [],
@@ -302,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "a35010c4",
    "metadata": {},
    "outputs": [
@@ -320,6 +328,64 @@
    "source": [
     "from IPython.display import display, Image\n",
     "display(Image(filename='profile_connection_scan_algo.png'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4865edc0",
+   "metadata": {},
+   "source": [
+    "# Journey Extraction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b58271b",
+   "metadata": {},
+   "source": [
+    "### Non-Journey-Pointer version - need two auxiliary data structures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d644d621",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stops = set(list(timetable['dep_stop']) + list(timetable['arr_stop']))\n",
+    "\n",
+    "# adjacency array that maps stop s to departure time and connection ID of all connections departing at s, sorted by departure time\n",
+    "outgoing_connections_support = {}\n",
+    "for stop in stops:\n",
+    "    outgoing_connections_support[stop] = timetable[timetable['dep_stop'] == stop][['dep_time', 'connection_id']]\n",
+    "\n",
+    "# adjacency array that maps trip t onto the IDs of the connections c in the trip, ordered by position in trip\n",
+    "trip_connections_support = {}\n",
+    "timetable.sort_values(by=['trip_id', 'dep_time'])\n",
+    "for trip in set(timetable['trip_id']):\n",
+    "    trip_connections_support[trip] = timetable[timetable['trip_id'] == trip][['connection_id']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "747f933e",
+   "metadata": {},
+   "source": [
+    "### Time to extract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "da9cee02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check whether directly walking from source stop s at source time t_s to target t is optimal\n",
+    "# no walking right now...\n",
+    "\n",
+    "# generate candidate connections, prune using T, calculating next ideal stop"
    ]
   }
  ],
