--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "e0a9bea2",
    "metadata": {},
    "outputs": [
@@ -82,14 +82,14 @@
        "4     143.TA.91-1-M-j24-1.50.R  8501120:0:6   83100.0   83100.0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "stop_trip_combinations = pd.read_csv('stop_times_df.csv', index_col=0)\n",
+    "stop_trip_combinations = pd.read_csv('data/stop_times_df.csv', index_col=0)\n",
     "stop_trip_combinations['dep_time'] = pd.to_timedelta(stop_trip_combinations['arrival_time_dt']).dt.total_seconds()\n",
     "stop_trip_combinations['arr_time'] = pd.to_timedelta(stop_trip_combinations['departure_time_dt']).dt.total_seconds()\n",
     "stop_trip_combinations = stop_trip_combinations[['trip_id', 'stop_id', 'dep_time', 'arr_time']]\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "d5877929",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "3fd54ac4",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "4502  1_21.TA.91-3N-Y-j24-1.139.R  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,95 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "ad972a10",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>stop_id_a</th>\n",
-       "      <th>stop_id_b</th>\n",
-       "      <th>distance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>8501118:0:2</td>\n",
-       "      <td>8588838</td>\n",
-       "      <td>190.513100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>8501118:0:2</td>\n",
-       "      <td>8501118:0:3</td>\n",
-       "      <td>3.438550</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>8501118:0:2</td>\n",
-       "      <td>8530749</td>\n",
-       "      <td>260.721897</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8501118:0:2</td>\n",
-       "      <td>8592209</td>\n",
-       "      <td>488.924099</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8501118:0:2</td>\n",
-       "      <td>8588983</td>\n",
-       "      <td>131.387627</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     stop_id_a    stop_id_b    distance\n",
-       "0  8501118:0:2      8588838  190.513100\n",
-       "1  8501118:0:2  8501118:0:3    3.438550\n",
-       "2  8501118:0:2      8530749  260.721897\n",
-       "3  8501118:0:2      8592209  488.924099\n",
-       "4  8501118:0:2      8588983  131.387627"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_path = 'data/'\n",
-    "footpaths = pd.read_pickle(data_path+\"footpaths.pkl\")\n",
-    "footpaths.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "80b0ffe4",
    "metadata": {},
    "outputs": [
     {
@@ -403,69 +316,152 @@
        "4  8501118:0:2      8588983  131.387627   93.848305"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "data_path = 'data/'\n",
+    "footpaths = pd.read_pickle(data_path+\"footpaths.pkl\")\n",
     "walk_speed = 1.4 # m/s\n",
     "footpaths['duration'] = footpaths['distance'] / walk_speed\n",
+    "footpaths_switched = footpaths.copy()\n",
+    "footpaths_switched[['stop_id_a', 'stop_id_b']] = footpaths[['stop_id_b', 'stop_id_a']]\n",
+    "footpaths = pd.concat([footpaths, footpaths_switched], ignore_index=True).drop_duplicates()\n",
     "footpaths.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "f04b938d",
+   "execution_count": 60,
+   "id": "390bf358",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dep_stop</th>\n",
+       "      <th>arr_stop</th>\n",
+       "      <th>dep_time</th>\n",
+       "      <th>arr_time</th>\n",
+       "      <th>trip_id</th>\n",
+       "      <th>connection_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8504003:0:1</td>\n",
+       "      <td>8504010:0:2</td>\n",
+       "      <td>5160.0</td>\n",
+       "      <td>5280.0</td>\n",
+       "      <td>22.TA.91-3N-Y-j24-1.175.R</td>\n",
+       "      <td>1_22.TA.91-3N-Y-j24-1.175.R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8504003:0:2</td>\n",
+       "      <td>8504010:0:2</td>\n",
+       "      <td>5160.0</td>\n",
+       "      <td>5280.0</td>\n",
+       "      <td>30.TA.91-3N-Y-j24-1.49.R</td>\n",
+       "      <td>1_30.TA.91-3N-Y-j24-1.49.R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8504003:0:2</td>\n",
+       "      <td>8504010:0:2</td>\n",
+       "      <td>5160.0</td>\n",
+       "      <td>5280.0</td>\n",
+       "      <td>25.TA.91-3N-Y-j24-1.98.R</td>\n",
+       "      <td>1_25.TA.91-3N-Y-j24-1.98.R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8504003:0:1</td>\n",
+       "      <td>8504010:0:2</td>\n",
+       "      <td>5160.0</td>\n",
+       "      <td>5280.0</td>\n",
+       "      <td>27.TA.91-3N-Y-j24-1.68.R</td>\n",
+       "      <td>1_27.TA.91-3N-Y-j24-1.68.R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8504003:0:1</td>\n",
+       "      <td>8504010:0:2</td>\n",
+       "      <td>5160.0</td>\n",
+       "      <td>5280.0</td>\n",
+       "      <td>21.TA.91-3N-Y-j24-1.139.R</td>\n",
+       "      <td>1_21.TA.91-3N-Y-j24-1.139.R</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      dep_stop     arr_stop  dep_time  arr_time                    trip_id  \\\n",
+       "0  8504003:0:1  8504010:0:2    5160.0    5280.0  22.TA.91-3N-Y-j24-1.175.R   \n",
+       "1  8504003:0:2  8504010:0:2    5160.0    5280.0   30.TA.91-3N-Y-j24-1.49.R   \n",
+       "2  8504003:0:2  8504010:0:2    5160.0    5280.0   25.TA.91-3N-Y-j24-1.98.R   \n",
+       "3  8504003:0:1  8504010:0:2    5160.0    5280.0   27.TA.91-3N-Y-j24-1.68.R   \n",
+       "4  8504003:0:1  8504010:0:2    5160.0    5280.0  21.TA.91-3N-Y-j24-1.139.R   \n",
+       "\n",
+       "                 connection_id  \n",
+       "0  1_22.TA.91-3N-Y-j24-1.175.R  \n",
+       "1   1_30.TA.91-3N-Y-j24-1.49.R  \n",
+       "2   1_25.TA.91-3N-Y-j24-1.98.R  \n",
+       "3   1_27.TA.91-3N-Y-j24-1.68.R  \n",
+       "4  1_21.TA.91-3N-Y-j24-1.139.R  "
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from bisect import bisect_left\n",
-    "\n",
-    "# greates value not greater than x\n",
-    "def binary_search(arr, x):\n",
-    "    i = bisect_left(arr, x)\n",
-    "    if i:\n",
-    "        return (i-1)\n",
-    "    else:\n",
-    "        return -1"
+    "timetable_sorted.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "id": "2a471266",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'Parent8501160'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_87613/2775808608.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     37\u001b[0m             \u001b[0mS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dep_stop'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'trip_id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dep_time'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dep_stop'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'arr_time'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'arr_stop'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfootpaths\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfootpaths\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'stop_id_a'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dep_stop'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m                 \u001b[0;32mif\u001b[0m \u001b[0mS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'stop_id_b'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;34m(\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dep_time'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'duration'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m                     \u001b[0mS\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'stop_id_b'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'walking'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dep_time'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'duration'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dep_stop'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'arr_time'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'arr_stop'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Parent8501160'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "source_stop_id = '8592060'\n",
+    "import numpy as np\n",
+    "\n",
+    "source_stop_id = '8504003:0:1'\n",
     "destination_stop_id = '8591984'\n",
     "\n",
-    "date_init = pd.to_datetime('00:00:00')\n",
-    "arrival_time = pd.to_datetime('08:00:00')\n",
-    "time_arrival = arrival_time.time()\n",
-    "total_seconds_arrival = time_arrival.hour*3600 + time_arrival.minute*60 + time_arrival.second\n",
-    "time_init = date_init.time()\n",
-    "total_seconds_init = time_init.hour*3600 + time_init.minute*60 + time_init.second\n",
-    "walk_speed = 1.4 # m/s\n",
+    "total_seconds_init = pd.to_timedelta('00:00:00').total_seconds()\n",
+    "arrival_time = '08:00:00'\n",
+    "total_seconds_arrival = pd.to_timedelta(arrival_time).total_seconds()\n",
     "\n",
-    "timetable_sorted = timetable.sort_values(by='arr_time')\n",
-    "timetable_sorted.head()\n",
+    "timetable_sorted = timetable.sort_values(by='arr_time').reset_index(drop=True)\n",
     "arr_times = timetable_sorted['arr_time'].values\n",
-    "stops_id = set(list(timetable['dep_stop']) + list(timetable['arr_stop']))\n",
+    "stop_ids = set(list(timetable['dep_stop']) + list(timetable['arr_stop']) + list(footpaths['stop_id_a']))\n",
+    "\n",
     "# S = {stop_id: [\n",
     "    # means of transport (trip ID or 'walking'),\n",
     "    # starting time (datetime),\n",
@@ -473,32 +469,53 @@
     "    # arriving_time (datetime),\n",
     "    # arriving stop (name)],\n",
     "# ...}\n",
-    "S = dict.fromkeys(stops_id, [None, total_seconds_init, None, None, None])\n",
+    "\n",
+    "S = dict.fromkeys(stop_ids, [None, total_seconds_init, None, None, None])\n",
     "S[destination_stop_id] = [None, total_seconds_arrival, destination_stop_id, None, None]\n",
+    "for idx, fp in footpaths[footpaths['stop_id_a'] == 'destination_stop_id'].iterrows():\n",
+    "    S[fp['stop_id_b']] = total_seconds_arrival - fp['duration']\n",
     "\n",
-    "trips_id = set(timetable['trip_id'])\n",
-    "T = dict.fromkeys(trips_id, False)\n",
+    "trip_ids = set(timetable['trip_id'])\n",
+    "T = dict.fromkeys(trip_ids, False)\n",
     "\n",
-    "c_0 = binary_search(arr_times, total_seconds_arrival)\n",
+    "# connection with latest arrival that is not after intended arrival time\n",
+    "c_0 = timetable_sorted[timetable_sorted['arr_time'] <= total_seconds_arrival].iloc[-1]['connection_id'] if np.any(timetable_sorted['arr_time'] <= total_seconds_arrival) else None\n",
     "\n",
-    "for idx, row in timetable_sorted[c_0::-1].iterrows():\n",
-    "    if S[source_stop_id][1] >= row['arr_time']: # if the arrival time is lower than the tentative startin time then we can break\n",
+    "# timetable subset from earliest arrival to c_0 arrival, in reverse order\n",
+    "timetable_ssr = timetable_sorted.iloc[:timetable_sorted.index[timetable_sorted['connection_id'] == c_0][0] + 1].iloc[::-1].reset_index(drop=True)\n",
+    "\n",
+    "# for each feasible connection in reverse order of arrival\n",
+    "for idx, row in timetable_ssr.iterrows():\n",
+    "    # if arrival time of current connection is lower than starting time, algorithm is completed\n",
+    "    if S[source_stop_id][1] >= row['arr_time']:\n",
     "        break\n",
-    "    if T[row['trip_id']] or S[row['arr_stop']][1] >= row['arr_time']:\n",
-    "        if S[row['dep_stop']][1] < row['dep_time']:\n",
-    "            T[row['trip_id']] = True\n",
-    "            S[row['dep_stop']] = [row['trip_id'], row['dep_time'], row['dep_stop'], row['arr_time'], row['arr_stop']]\n",
-    "            for idx, fp in footpaths[footpaths['stop_id_a'] == row['dep_stop']].iterrows():\n",
-    "                if S[fp['stop_id_b']][1] < ( row['dep_time'] - fp['duration']):\n",
-    "                    S[fp['stop_id_b']] = ['walking', row['dep_time'] - fp['duration'], row['dep_stop'], row['arr_time'], row['arr_stop']]"
+    "    # if current connections trip is True in T (meaning ?) OR current connections arrival stop \n",
+    "    if (T[row['trip_id']] or S[row['arr_stop']][1] >= row['arr_time']) and (S[row['dep_stop']][1] < row['dep_time']):\n",
+    "        T[row['trip_id']] = True\n",
+    "        S[row['dep_stop']] = [row['trip_id'], row['dep_time'], row['dep_stop'], row['arr_time'], row['arr_stop']]\n",
+    "        for idx, fp in footpaths[footpaths['stop_id_a'] == row['dep_stop']].iterrows():\n",
+    "            if S[fp['stop_id_b']][1] < ( row['dep_time'] - fp['duration']):\n",
+    "                S[fp['stop_id_b']] = ['walking', row['dep_time'] - fp['duration'], row['dep_stop'], row['arr_time'], row['arr_stop']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "981759d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[68], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m step[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m!=\u001b[39mmof:\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m step[\u001b[38;5;241m2\u001b[39m]\u001b[38;5;241m!=\u001b[39msource_stop_id:\n\u001b[1;32m----> 8\u001b[0m         \u001b[43mpath\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;241m3\u001b[39m] \u001b[38;5;241m=\u001b[39m old[\u001b[38;5;241m3\u001b[39m]\n\u001b[0;32m      9\u001b[0m         path[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m4\u001b[39m] \u001b[38;5;241m=\u001b[39m old[\u001b[38;5;241m4\u001b[39m]\n\u001b[0;32m     10\u001b[0m     path\u001b[38;5;241m.\u001b[39mappend(step)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "if S[source_stop_id][0]!=None:\n",
     "    path = []\n",
@@ -812,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
