--- a/project.ipynb
+++ b/project.ipynb
@@ -829,14 +829,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 99,
    "id": "2a471266",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "source_stop_id = '8591976'\n",
+    "source_stop_id = '8518452:0:2'\n",
     "destination_stop_id = '8591984'\n",
     "\n",
     "total_seconds_init = pd.to_timedelta('00:00:00').total_seconds()\n",
@@ -874,7 +874,7 @@
     "    # if arrival time of current connection is lower than starting time, algorithm is completed\n",
     "    if S[source_stop_id][1] >= row['arr_time']:\n",
     "        break\n",
-    "    # if current connections trip is True in T (meaning ?) OR current connections arrival stop \n",
+    "    # i have no intuitive sense of what this if statement is checking\n",
     "    if (T[row['trip_id']] or S[row['arr_stop']][1] >= row['arr_time']) and (S[row['dep_stop']][1] < row['dep_time']):\n",
     "        T[row['trip_id']] = True\n",
     "        S[row['dep_stop']] = [row['trip_id'], row['dep_time'], row['dep_stop'], row['arr_time'], row['arr_stop']]\n",
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 100,
    "id": "981759d9",
    "metadata": {},
    "outputs": [
@@ -893,7 +893,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "here ['walking', 26664.55609958136, '8593795', 27060.0, '8593798']\n",
+      "here ['walking', 28086.470616835533, '8592103', 28320.0, '8592102']\n",
       "[] []\n",
       "here2\n",
       "here3\n"
@@ -906,7 +906,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[93], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhere3\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m step[\u001b[38;5;241m2\u001b[39m]\u001b[38;5;241m!=\u001b[39msource_stop_id:\n\u001b[1;32m---> 14\u001b[0m     path[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m3\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mold\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m     15\u001b[0m     path[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m4\u001b[39m] \u001b[38;5;241m=\u001b[39m old[\u001b[38;5;241m4\u001b[39m]\n\u001b[0;32m     16\u001b[0m path\u001b[38;5;241m.\u001b[39mappend(step)\n",
+      "Cell \u001b[1;32mIn[100], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhere3\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m step[\u001b[38;5;241m2\u001b[39m]\u001b[38;5;241m!=\u001b[39msource_stop_id:\n\u001b[1;32m---> 14\u001b[0m     path[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m3\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mold\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m     15\u001b[0m     path[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][\u001b[38;5;241m4\u001b[39m] \u001b[38;5;241m=\u001b[39m old[\u001b[38;5;241m4\u001b[39m]\n\u001b[0;32m     16\u001b[0m path\u001b[38;5;241m.\u001b[39mappend(step)\n",
       "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
