make footpath init more intuitive

--- a/project.ipynb
+++ b/project.ipynb
@@ -362,8 +362,8 @@
     "\n",
     "S = dict.fromkeys(stop_ids, [None, total_seconds_init, None, None, None])\n",
     "S[destination_stop_id] = [None, total_seconds_arrival, destination_stop_id, None, None]\n",
-    "for idx, fp in footpaths[footpaths['stop_id_a'] == 'destination_stop_id'].iterrows():\n",
-    "    S[fp['stop_id_b']] = ['walking', total_seconds_arrival - fp['duration'], fp['stop_id_b'], total_seconds_arrival, destination_stop_id]\n",
+    "for idx, fp in footpaths[footpaths['stop_id_b'] == 'destination_stop_id'].iterrows():\n",
+    "    S[fp['stop_id_a']] = ['walking', total_seconds_arrival - fp['duration'], fp['stop_id_a'], total_seconds_arrival, destination_stop_id]\n",
     "\n",
     "trip_ids = set(timetable['trip_id'])\n",
     "T = dict.fromkeys(trip_ids, False)\n",
