fix: add plot missing info.

--- a/project.ipynb
+++ b/project.ipynb
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 287,
    "id": "19888843",
    "metadata": {},
    "outputs": [],
@@ -683,7 +683,22 @@
     "        plot_df.append(row)\n",
     "        \n",
     "    plot_df = pd.DataFrame(plot_df)\n",
+    "    \n",
     "    fig = go.Figure()\n",
+    "    \n",
+    "    # Plot all the stops of the journey\n",
+    "    fig.add_trace(go.Scattermapbox(\n",
+    "        lat=plot_df['dep_lat'],\n",
+    "        lon=plot_df['dep_lon'],\n",
+    "        mode='markers',\n",
+    "        name='Stops',\n",
+    "        marker=go.scattermapbox.Marker(\n",
+    "            size=9\n",
+    "        ),\n",
+    "        hoverinfo='text',\n",
+    "        hovertemplate=\"Dep-Time: %{text}}\",\n",
+    "        text=plot_df['dep_time'],\n",
+    "    ))\n",
     "\n",
     "    # Add a green marker for the source stop\n",
     "    start_info = stops_info[stops_info['stop_id'] == source_id]  \n",
@@ -752,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 288,
    "id": "25e62421",
    "metadata": {},
    "outputs": [
@@ -760,7 +775,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'transport': '193.TA.91-6-U-j24-1.162.H', 'start_time': 71340.0, 'start_stop': '8504010:0:2', 'arrival_time': 71460.0, 'arrival_stop': '8504000:0:1'}, {'transport': '199.TA.91-6-U-j24-1.163.H', 'start_time': 71460.0, 'start_stop': '8504000:0:1', 'arrival_time': 71700.0, 'arrival_stop': '8501120:0:3'}, {'transport': 'walking', 'start_time': 71704.75163426645, 'start_stop': '8501120:0:3', 'arrival_time': 71940.0, 'arrival_stop': '8592079'}, {'transport': '192.TA.92-2-T-j24-1.5.H', 'start_time': 71940.0, 'start_stop': '8592079', 'arrival_time': 72000.0, 'arrival_stop': '8592020'}, {'transport': None, 'start_time': 72000.0, 'start_stop': '8592020', 'arrival_time': None, 'arrival_stop': None}]\n"
+      "[{'transport': '434.TA.91-m1-j24-1.3.H', 'start_time': 70860.0, 'start_stop': '8501212', 'arrival_time': 71160.0, 'arrival_stop': '8501209'}, {'transport': 'walking', 'start_time': 71435.33830284899, 'start_stop': '8501209', 'arrival_time': 71760.0, 'arrival_stop': '8592049'}, {'transport': '361.TA.92-18-B-j24-1.4.H', 'start_time': 71760.0, 'start_stop': '8592049', 'arrival_time': 72000.0, 'arrival_stop': '8592206'}, {'transport': None, 'start_time': 72000.0, 'start_stop': '8592206', 'arrival_time': None, 'arrival_stop': None}]\n"
      ]
     },
     {
@@ -771,12 +786,40 @@
        },
        "data": [
         {
-         "hoverinfo": "none",
+         "hoverinfo": "text",
+         "hovertemplate": "Dep-Time: %{text}}",
          "lat": [
-          46.513386889984
+          46.524989399836,
+          46.524136449395,
+          46.52809204862,
+          46.538226956913
          ],
          "lon": [
-          6.677689547502
+          6.578892832541,
+          6.602563440281,
+          6.604063626805,
+          6.59481996253
+         ],
+         "marker": {
+          "size": 9
+         },
+         "mode": "markers",
+         "name": "Stops",
+         "text": [
+          "19:41:00",
+          "19:50:35",
+          "19:56:00",
+          "20:00:00"
+         ],
+         "type": "scattermapbox"
+        },
+        {
+         "hoverinfo": "none",
+         "lat": [
+          46.524989399836
+         ],
+         "lon": [
+          6.578892832541
          ],
          "marker": {
           "color": "green",
@@ -789,10 +832,10 @@
         {
          "hoverinfo": "none",
          "lat": [
-          46.515464026389
+          46.538226956913
          ],
          "lon": [
-          6.633070227333
+          6.59481996253
          ],
          "marker": {
           "color": "red",
@@ -805,16 +848,16 @@
         {
          "hoverinfo": "none",
          "lat": [
-          46.513386889984,
-          46.514709837231
+          46.524989399836,
+          46.524136449395
          ],
          "line": {
           "color": "blue",
           "width": 2
          },
          "lon": [
-          6.677689547502,
-          6.656974397047
+          6.578892832541,
+          6.602563440281
          ],
          "mode": "lines",
          "showlegend": false,
@@ -823,34 +866,16 @@
         {
          "hoverinfo": "none",
          "lat": [
-          46.514709837231,
-          46.516793104755
-         ],
-         "line": {
-          "color": "blue",
-          "width": 2
-         },
-         "lon": [
-          6.656974397047,
-          6.629090690624
-         ],
-         "mode": "lines",
-         "showlegend": false,
-         "type": "scattermapbox"
-        },
-        {
-         "hoverinfo": "none",
-         "lat": [
-          46.516793104755,
-          46.514487287611
+          46.524136449395,
+          46.52809204862
          ],
          "line": {
           "color": "red",
           "width": 2
          },
          "lon": [
-          6.629090690624,
-          6.631785636477
+          6.602563440281,
+          6.604063626805
          ],
          "mode": "lines",
          "showlegend": false,
@@ -859,16 +884,16 @@
         {
          "hoverinfo": "none",
          "lat": [
-          46.514487287611,
-          46.515464026389
+          46.52809204862,
+          46.538226956913
          ],
          "line": {
           "color": "blue",
           "width": 2
          },
          "lon": [
-          6.631785636477,
-          6.633070227333
+          6.604063626805,
+          6.59481996253
          ],
          "mode": "lines",
          "showlegend": false,
@@ -878,8 +903,8 @@
        "layout": {
         "mapbox": {
          "center": {
-          "lat": 46.514968229194,
-          "lon": 6.6457220997966004
+          "lat": 46.528861213691,
+          "lon": 6.59508496553925
          },
          "style": "open-street-map",
          "zoom": 10
@@ -1702,7 +1727,7 @@
          }
         },
         "title": {
-         "text": "Journey from La Conversion (8504010:0:2) at Lausanne, Closelet (8592020) arriving at 20:00:00"
+         "text": "Journey from Chavannes-R., UNIL-Mouline (8501212) at Renens VD, Bourg-Dessus (8592206) arriving at 20:00:00"
         }
        }
       }
