--- a/journey_fixer.ipynb
+++ b/journey_fixer.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
     "            i += 1\n",
     "            if i % 1000 == 0:\n",
     "                try:\n",
-    "                    print(S['8501121:0:2'], stops_info[stops_info['stop_id'] == '8501121:0:2']['stop_name'].values[0])\n",
+    "                    print(S['8501118:0:1'], stops_info[stops_info['stop_id'] == '8501118:0:1']['stop_name'].values[0])\n",
     "                except:\n",
     "                    pass\n",
     "        return S, T"
@@ -137,49 +137,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'transport': None, 'start_time': 0.0, 'start_stop': None, 'arrival_time': None, 'arrival_stop': None} Renens VD\n",
-      "{'transport': None, 'start_time': 0.0, 'start_stop': None, 'arrival_time': None, 'arrival_stop': None} Renens VD\n",
-      "{'transport': None, 'start_time': 0.0, 'start_stop': None, 'arrival_time': None, 'arrival_stop': None} Lausanne\n",
-      "{'transport': None, 'start_time': 0.0, 'start_stop': None, 'arrival_time': None, 'arrival_stop': None} Lausanne, Grancy\n",
-      "{'transport': None, 'start_time': 0.0, 'start_stop': None, 'arrival_time': None, 'arrival_stop': None} Renens VD\n",
-      "{'transport': None, 'start_time': 0.0, 'start_stop': None, 'arrival_time': None, 'arrival_stop': None} Renens VD\n",
-      "{'transport': None, 'start_time': 0.0, 'start_stop': None, 'arrival_time': None, 'arrival_stop': None} Lausanne\n",
-      "{'transport': None, 'start_time': 0.0, 'start_stop': None, 'arrival_time': None, 'arrival_stop': None} Lausanne, Grancy\n",
-      "{'transport': None, 'start_time': 0.0, 'start_stop': None, 'arrival_time': None, 'arrival_stop': None} Renens VD\n",
-      "{'transport': None, 'start_time': 0.0, 'start_stop': None, 'arrival_time': None, 'arrival_stop': None} Renens VD\n",
-      "{'transport': 'walking', 'start_time': 70904.30451259042, 'start_stop': '8501120:0:3', 'arrival_time': 71220.0, 'arrival_stop': '8579254'} Lausanne\n",
-      "{'transport': 'walking', 'start_time': 71104.7936075016, 'start_stop': '8592052', 'arrival_time': 71340.0, 'arrival_stop': '8592028'} Lausanne, Grancy\n",
-      "{'transport': None, 'start_time': 0.0, 'start_stop': None, 'arrival_time': None, 'arrival_stop': None} Renens VD\n",
-      "{'transport': None, 'start_time': 0.0, 'start_stop': None, 'arrival_time': None, 'arrival_stop': None} Renens VD\n",
-      "{'transport': 'walking', 'start_time': 71071.29589290495, 'start_stop': '8501120:0:3', 'arrival_time': 71220.0, 'arrival_stop': '8592052'} Lausanne\n",
-      "{'transport': '3289.TA.91-m2-j24-1.4.R', 'start_time': 71220.0, 'start_stop': '8592052', 'arrival_time': 71280.0, 'arrival_stop': '8592028'} Lausanne, Grancy\n",
-      "{'transport': None, 'start_time': 0.0, 'start_stop': None, 'arrival_time': None, 'arrival_stop': None} Renens VD\n",
-      "{'transport': None, 'start_time': 0.0, 'start_stop': None, 'arrival_time': None, 'arrival_stop': None} Renens VD\n",
-      "{'transport': 'walking', 'start_time': 71071.29589290495, 'start_stop': '8501120:0:3', 'arrival_time': 71220.0, 'arrival_stop': '8592052'} Lausanne\n",
-      "{'transport': '3289.TA.91-m2-j24-1.4.R', 'start_time': 71220.0, 'start_stop': '8592052', 'arrival_time': 71280.0, 'arrival_stop': '8592028'} Lausanne, Grancy\n",
-      "{'transport': 'walking', 'start_time': 70311.54929820055, 'start_stop': '8501118:0:1', 'arrival_time': 70320.0, 'arrival_stop': '8501118:0:3'} Renens VD\n",
-      "{'transport': '382.TA.91-33-C-j24-1.91.H', 'start_time': 70320.0, 'start_stop': '8501118:0:3', 'arrival_time': 70680.0, 'arrival_stop': '8501120:0:3'} Renens VD\n",
-      "{'transport': 'walking', 'start_time': 71071.29589290495, 'start_stop': '8501120:0:3', 'arrival_time': 71220.0, 'arrival_stop': '8592052'} Lausanne\n",
-      "{'transport': '3289.TA.91-m2-j24-1.4.R', 'start_time': 71220.0, 'start_stop': '8592052', 'arrival_time': 71280.0, 'arrival_stop': '8592028'} Lausanne, Grancy\n",
-      "{'transport': 'walking', 'start_time': 70311.54929820055, 'start_stop': '8501118:0:1', 'arrival_time': 70320.0, 'arrival_stop': '8501118:0:3'} Renens VD\n",
-      "{'transport': '382.TA.91-33-C-j24-1.91.H', 'start_time': 70320.0, 'start_stop': '8501118:0:3', 'arrival_time': 70680.0, 'arrival_stop': '8501120:0:3'} Renens VD\n",
-      "{'transport': 'walking', 'start_time': 71071.29589290495, 'start_stop': '8501120:0:3', 'arrival_time': 71220.0, 'arrival_stop': '8592052'} Lausanne\n",
-      "{'transport': '3289.TA.91-m2-j24-1.4.R', 'start_time': 71220.0, 'start_stop': '8592052', 'arrival_time': 71280.0, 'arrival_stop': '8592028'} Lausanne, Grancy\n",
-      "{'transport': 'walking', 'start_time': 70311.54929820055, 'start_stop': '8501118:0:1', 'arrival_time': 70320.0, 'arrival_stop': '8501118:0:3'} Renens VD\n",
-      "{'transport': '382.TA.91-33-C-j24-1.91.H', 'start_time': 70320.0, 'start_stop': '8501118:0:3', 'arrival_time': 70680.0, 'arrival_stop': '8501120:0:3'} Renens VD\n",
-      "{'transport': 'walking', 'start_time': 71071.29589290495, 'start_stop': '8501120:0:3', 'arrival_time': 71220.0, 'arrival_stop': '8592052'} Lausanne\n",
-      "{'transport': '3289.TA.91-m2-j24-1.4.R', 'start_time': 71220.0, 'start_stop': '8592052', 'arrival_time': 71280.0, 'arrival_stop': '8592028'} Lausanne, Grancy\n",
-      "{'transport': 'walking', 'start_time': 70311.54929820055, 'start_stop': '8501118:0:1', 'arrival_time': 70320.0, 'arrival_stop': '8501118:0:3'} Renens VD\n",
-      "{'transport': '382.TA.91-33-C-j24-1.91.H', 'start_time': 70320.0, 'start_stop': '8501118:0:3', 'arrival_time': 70680.0, 'arrival_stop': '8501120:0:3'} Renens VD\n",
-      "{'transport': 'walking', 'start_time': 71071.29589290495, 'start_stop': '8501120:0:3', 'arrival_time': 71220.0, 'arrival_stop': '8592052'} Lausanne\n",
-      "{'transport': '3289.TA.91-m2-j24-1.4.R', 'start_time': 71220.0, 'start_stop': '8592052', 'arrival_time': 71280.0, 'arrival_stop': '8592028'} Lausanne, Grancy\n"
+      "{'transport': None, 'start_time': 72000.0, 'start_stop': '8501121:0:2', 'arrival_time': None, 'arrival_stop': None} Pully\n",
+      "{'transport': None, 'start_time': 72000.0, 'start_stop': '8501121:0:2', 'arrival_time': None, 'arrival_stop': None} Pully\n",
+      "{'transport': None, 'start_time': 72000.0, 'start_stop': '8501121:0:2', 'arrival_time': None, 'arrival_stop': None} Pully\n",
+      "{'transport': None, 'start_time': 72000.0, 'start_stop': '8501121:0:2', 'arrival_time': None, 'arrival_stop': None} Pully\n",
+      "{'transport': None, 'start_time': 72000.0, 'start_stop': '8501121:0:2', 'arrival_time': None, 'arrival_stop': None} Pully\n",
+      "{'transport': None, 'start_time': 72000.0, 'start_stop': '8501121:0:2', 'arrival_time': None, 'arrival_stop': None} Pully\n",
+      "{'transport': None, 'start_time': 72000.0, 'start_stop': '8501121:0:2', 'arrival_time': None, 'arrival_stop': None} Pully\n",
+      "{'transport': None, 'start_time': 72000.0, 'start_stop': '8501121:0:2', 'arrival_time': None, 'arrival_stop': None} Pully\n",
+      "{'transport': None, 'start_time': 72000.0, 'start_stop': '8501121:0:2', 'arrival_time': None, 'arrival_stop': None} Pully\n"
      ]
     }
    ],
@@ -196,6 +169,13 @@
     "\n",
     "S, T = connection_scan_latest_arrival(timetable, footpaths, '8501215', '8501121:0:2', '20:00:00')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
